# API-REST-Ollivanders

./: .gitignore  README.md  api.py  config.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
controller/: factory.py
coverage_annotation/: controller_hello_ollivanders.py,cover
docs/source/: conf.py  controller.rst  index.rst  modules.rst  repository.rst  resources.rst  service.rst  test.rst  test.test_repository.rst  test.test_resources.rst
domain/: Conjured.py  FactoryDatabase.py  Sulfuras.py
js/: fetchs.js
repository/: db.py  db_connection.py  models.py  repo.py
repository/models/: items.py  users.py
resources/: inventario.py  items.py  quality.py  sellin.py  updateQuality.py  wellcome.py
service/: service.py
static/css/: layout.css
static/js/: fetchs.js
templates/: dashboard.html  home.html  inventory.html  layout.html  login.html  register.html
test/: conftest.py  test_database_module.py  test_hello_world.py  test_resources.py
test/test_domain/: test_aged_brie.py  test_backstagePasses.py  test_conjured.py  test_inventory.py  test_normal_item.py  test_sulfuras.py
test/test_repository/: test_database_module.py  test_repository_db.py
test/test_resources/: test_add_item.py  test_delete_item.py  test_get_items.py  test_item.py  test_put_item.py  test_quality.py  test_sellin.py  test_update_quality.py
